welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: not found: value getColorSol
    else if (getColorSol()=Color.green && estFaceMur()==true) {
             ^