welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

 def isFacingTrail():Boolean = {
 	
 var vert:Boolean=false
avance()
  if (getCouleurSol()==Color.green && estFaceMur()==false){
      
    vert=true }
    else if (getColorSol()=Color.green && estFaceMur()==true) {
    recule()
    vert=false
}
 else { recule()
 vert=false }
 
 
 return vert ;
}   